[package]
name = "astar_pathfinding_heightmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "3.0.14"
bevy_math = "0.8.1"
noisy_bevy = "0.1.0"
image = "0.24.4"
imageproc = "0.23.0"

itertools = "0.10.5"
indexmap = "1.9.1"
rustc-hash = "1.1.0"